<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".initialscreens.GetStartedActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="24sp"
            android:text="@string/getStartedActivityTitle"
            android:padding="16dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@color/app_primary"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout1"
        android:id="@+id/scrollView">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/relLayout">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/relativeLayout1"
                android:layout_marginTop="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/name_icon"
                    android:id="@+id/name_icon"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/editText"
                    android:id="@+id/user"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@id/name_icon"
                    android:layout_toEndOf="@+id/name_icon"
                    android:hint="@string/Name"
                    android:textSize="16sp"
                    android:inputType="text"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:paddingLeft="20dp"
                    android:paddingStart="20dp"
                    android:layout_alignBottom="@+id/name_icon"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:id="@+id/userWarning"
                    android:layout_below="@id/user"
                    android:textColor="@color/red"
                    android:textSize="12sp"
                    android:text="@string/userWarning"
                    android:visibility="invisible"
                    android:paddingTop="16dp"
                    android:layout_alignLeft="@+id/user"
                    android:layout_alignStart="@+id/user"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/relativeLayout2"
                android:layout_below="@+id/relativeLayout1"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/gender_icon"
                    android:id="@+id/gender_icon"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/gender"
                    android:weightSum="2"
                    android:layout_toRightOf="@id/gender_icon"
                    android:layout_toEndOf="@id/gender_icon"
                    android:paddingLeft="20dp"
                    android:paddingStart="20dp"
                    android:layout_alignBottom="@+id/gender_icon">

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:id="@+id/male"
                        android:layout_weight="1"
                        android:text="@string/male"
                        android:layout_marginRight="8dp"
                        android:layout_marginEnd="8dp"
                        android:background="@color/editText"/>
                    <Button
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:id="@+id/female"
                        android:layout_weight="1"
                        android:text="@string/female"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:background="@color/editText"/>

                </LinearLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:id="@+id/genderWarning"
                    android:layout_below="@id/gender"
                    android:textColor="@color/red"
                    android:textSize="12sp"
                    android:text="@string/genderWarning"
                    android:visibility="invisible"
                    android:layout_alignLeft="@+id/gender"
                    android:layout_alignStart="@+id/gender"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/relativeLayout3"
                android:layout_below="@+id/relativeLayout2"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/age_icon"
                    android:id="@+id/age_icon"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/editText"
                    android:id="@+id/age"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@id/age_icon"
                    android:layout_toEndOf="@+id/age_icon"
                    android:hint="@string/age"
                    android:textSize="16sp"
                    android:inputType="text"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:paddingLeft="20dp"
                    android:paddingStart="20dp"
                    android:layout_alignBottom="@+id/age_icon"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:id="@+id/ageWarning"
                    android:layout_below="@id/age"
                    android:textColor="@color/red"
                    android:textSize="12sp"
                    android:text="@string/ageWarning"
                    android:visibility="invisible"
                    android:layout_alignLeft="@+id/age"
                    android:layout_alignStart="@+id/age"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/relativeLayout4"
                android:layout_below="@+id/relativeLayout3"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/weight_icon"
                    android:id="@+id/weight_icon"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/editText"
                    android:id="@+id/weight"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@id/weight_icon"
                    android:layout_toEndOf="@+id/weight_icon"
                    android:hint="@string/weight"
                    android:textSize="16sp"
                    android:inputType="text"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:paddingLeft="20dp"
                    android:paddingStart="20dp"
                    android:layout_alignBottom="@+id/weight_icon"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:id="@+id/weightWarning"
                    android:layout_below="@id/weight"
                    android:textColor="@color/red"
                    android:textSize="12sp"
                    android:text="@string/weightWarning"
                    android:visibility="invisible"
                    android:layout_alignLeft="@+id/weight"
                    android:layout_alignStart="@+id/weight"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/relativeLayout5"
                android:layout_below="@+id/relativeLayout4"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/height_icon"
                    android:id="@+id/height_icon"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/editText"
                    android:id="@+id/height"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@id/height_icon"
                    android:layout_toEndOf="@+id/height_icon"
                    android:hint="@string/height"
                    android:textSize="16sp"
                    android:inputType="text"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:paddingLeft="20dp"
                    android:paddingStart="20dp"
                    android:layout_alignBottom="@+id/height_icon"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:id="@+id/heightWarning"
                    android:layout_below="@id/height"
                    android:textColor="@color/red"
                    android:textSize="12sp"
                    android:text="@string/heightWarning"
                    android:visibility="invisible"
                    android:layout_alignLeft="@+id/height"
                    android:layout_alignStart="@+id/height"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/relativeLayout6"
                android:layout_below="@+id/relativeLayout5"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/lifestyle_icon"
                    android:id="@+id/lifestyle_icon"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"/>

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/exercise_arrays"
                    android:prompt="@string/exercise_prompt"
                    android:background="@color/editText"
                    android:id="@+id/lifestyle"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@id/lifestyle_icon"
                    android:layout_toEndOf="@+id/lifestyle_icon"
                    android:hint="@string/height"
                    android:textSize="16sp"
                    android:inputType="text"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:paddingLeft="20dp"
                    android:paddingStart="20dp"
                    android:layout_alignBottom="@+id/lifestyle_icon"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:id="@+id/lifestyleWarning"
                    android:layout_below="@id/lifestyle"
                    android:textColor="@color/red"
                    android:textSize="12sp"
                    android:text="@string/activityWarning"
                    android:visibility="invisible"
                    android:layout_alignLeft="@+id/lifestyle"
                    android:layout_alignStart="@+id/lifestyle"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/relativeLayout7"
                android:layout_below="@+id/relativeLayout6"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/weight_icon"
                    android:id="@+id/dream_weight_icon"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/editText"
                    android:id="@+id/dream_weight"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@id/dream_weight_icon"
                    android:layout_toEndOf="@+id/dream_weight_icon"
                    android:hint="@string/dream_weight"
                    android:textSize="16sp"
                    android:inputType="text"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:paddingLeft="20dp"
                    android:paddingStart="20dp"
                    android:layout_alignBottom="@+id/dream_weight_icon"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:id="@+id/dreamWeightWarning"
                    android:layout_below="@id/dream_weight"
                    android:textColor="@color/red"
                    android:textSize="12sp"
                    android:text="@string/weightWarning"
                    android:visibility="invisible"
                    android:layout_alignLeft="@+id/dream_weight"
                    android:layout_alignStart="@+id/dream_weight"/>
            </RelativeLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@id/relativeLayout7"
                android:background="@color/app_primary"
                android:id="@+id/btn_next"
                android:text="NEXT"
                android:textColor="@color/white"
                android:textSize="24sp"/>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>