<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/cardView1"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="3dp"
                app:cardPreventCornerOverlap="false"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cal_summary"
                        android:layout_gravity="center"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        android:fontFamily="sans-serif-medium"
                        android:layout_margin="24dp"/>

                    <com.razerdp.widget.animatedpieview.AnimatedPieView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/pieView"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_margin="20dp"
                android:id="@+id/cardView2"
                app:cardCornerRadius="10dp"
                app:cardElevation="3dp"
                app:cardPreventCornerOverlap="false"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        android:layout_gravity="center"
                        android:text="@string/keep_fit"
                        android:layout_margin="20dp"
                        android:fontFamily="sans-serif-medium"/>

                    <Button
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/exercise_button"
                        android:text="@string/start_pedometer"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="32dp"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:layout_gravity="center"
                        android:background="@drawable/button_filled_style"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_margin="20dp"
                android:id="@+id/cardView3"
                app:cardCornerRadius="10dp"
                app:cardElevation="3dp"
                app:cardPreventCornerOverlap="false"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        android:layout_gravity="center"
                        android:text="@string/track_cals"
                        android:layout_margin="20dp"
                        android:fontFamily="sans-serif-medium"/>

                    <Button
                        android:id="@+id/calorie_button"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="32dp"
                        android:background="@drawable/button_filled_style"
                        android:text="@string/start_calorie_tracker"
                        android:textColor="@color/white"
                        android:textSize="20sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>



    </ScrollView>

    <!--<android.support.design.widget.BottomNavigationView-->
        <!--android:id="@+id/bottom_navigation"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--app:menu="@menu/bottom_nav_menu"-->
        <!--app:itemBackground="@color/colorPrimary"-->
        <!--app:itemIconTint="@android:color/white"-->
        <!--app:itemTextColor="@android:color/white" />-->



</LinearLayout>